<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_profile"
        android:title="@string/action_profile"/>
    
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/action_calendar"/>
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search" >
        <menu>
            <item android:id="@+id/form_name"
                  android:title="@string/subitem_search_by_name" />
            <item android:id="@+id/form_genre"
                  android:title="@string/subitem_search_by_genre" />
            <item android:id="@+id/form_friend"
                  android:title="@string/subitem_search_friend" />
        </menu>
    </item>   
</menu>