<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@layout/backrepeat" >
    
    <com.loopj.android.image.SmartImageView
	        android:id="@+id/banner_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:contentDescription="@string/banner_desc"
	        android:src="@drawable/img_no_banner" />
    
    <TextView 
            android:id="@+id/episode_info"
            android:src="@string/episode_info"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="5sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
        
    <TextView 
            android:id="@+id/episode_date"
            android:src="@string/episode_date"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="5sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
   
    <RatingBar
        android:id="@+id/ratingBarEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="1.0" />
    
    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginTop="5dp" >
	    
	    <TextView 
	            android:id="@+id/rating_episode_avg"
	            android:src="@string/rating_episode_avg"
        		android:textIsSelectable="false" 
        		android:textColor="@color/Snow"
        		android:paddingLeft="5sp"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content" />
        
	    <TextView 
	            android:id="@+id/rating_episode_total"
	            android:src="@string/rating_episode_total"
        		android:textIsSelectable="false" 
        		android:textColor="@color/Snow"
        		android:paddingLeft="20sp"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content" />  
    </LinearLayout>
    
    <ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	    <TextView 
	        android:id="@+id/episode_desc"
	        android:src="@string/episode_desc"
	        android:textIsSelectable="false" 
	        style="@style/SerieDescription"/>

    </ScrollView>
</LinearLayout>