<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@layout/backrepeat" >
    
    <com.loopj.android.image.SmartImageView
	        android:id="@+id/profile_photo_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:contentDescription="@string/profile_photo"
	        android:src="@drawable/img_unknown" />
    
    <TextView 
            android:id="@+id/profile_name"
            android:src="@string/profile_name"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="5sp"
       		android:paddingTop="10sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />

    <LinearLayout 
        android:id="@+id/subscriptions_layout"
        android:orientation="horizontal"
        android:clickable="true"
        android:paddingTop="20sp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
    
        <TextView 
            android:id="@+id/subscriptions_id"
         	android:text="@string/profile_subscriptions"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="24sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/subscriptions_count"
         	android:text="@string/profile_subs_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Red"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout> 
	<LinearLayout 
        android:id="@+id/friends_layout"
        android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:clickable="true"
    	android:paddingTop="20sp"
    	android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/friend_id"
         	android:text="@string/profile_friends"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="24sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/friend_count"
         	android:text="@string/profile_frie_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Blue"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout> 
	<LinearLayout 
        android:id="@+id/suggestions_layout"
        android:orientation="horizontal"
        android:clickable="true"
        android:paddingTop="20sp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/suggestions_id"
         	android:text="@string/profile_suggestions"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="24sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/suggestions_count"
         	android:text="@string/profile_sugg_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Green"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout> 
	<LinearLayout 
        android:id="@+id/friendrequests_layout"
        android:orientation="horizontal"
        android:clickable="true"
        android:paddingTop="20sp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/friendrequest_id"
         	android:text="@string/profile_friendrequests"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="24sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/friendrequest_count"
         	android:text="@string/profile_freq_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Orange"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>