<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@layout/backrepeat" >
    
    <com.loopj.android.image.SmartImageView
	        android:id="@+id/user_photo_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="10sp"
	        android:paddingRight="10sp"
	        android:contentDescription="@string/profile_photo"
	        android:src="@drawable/img_unknown" />
    
    <TextView 
            android:id="@+id/user_name"
            android:src="@string/user_name"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="5sp"
       		android:paddingTop="10sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
    <TextView 
            android:id="@+id/user_email"
            android:src="@string/user_email"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="5sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
	
    <LinearLayout 
        android:id="@+id/subscriptions_layout2"
        android:orientation="horizontal"
        android:clickable="true"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
    
        <TextView 
            android:id="@+id/subscriptions_id2"
         	android:text="@string/user_subscriptions"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="18sp"
    		android:paddingLeft="5sp"
    		android:paddingTop="10sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/subscriptions_count2"
         	android:text="@string/user_subs_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Red"
    		android:gravity="right"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout> 
	<LinearLayout 
        android:id="@+id/friends_layout2"
        android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:clickable="true"
    	android:layout_height="wrap_content" >
    
        <TextView 
            android:id="@+id/friend_id2"
         	android:text="@string/user_friends"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:textSize="18sp"
    		android:paddingLeft="5sp"
    		android:paddingTop="10sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/friend_count2"
         	android:text="@string/user_frie_count"
    		android:textIsSelectable="false" 
    		android:textColor="@color/Snow"
    		android:background="@color/Blue"
    		android:gravity="right"
    		android:textSize="18sp"
    		android:paddingTop="2sp"
    		android:paddingLeft="2sp"
    		android:paddingRight="2sp"
    		android:paddingBottom="2sp"
         	android:layout_width="wrap_content"
     		android:layout_height="wrap_content" />
	</LinearLayout>  
</LinearLayout>