<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/backrepeat"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal"  >
    	
        <Button 
            android:id="@+id/act_comment_profile"
            android:src="@string/comment_btn"
            android:text="@string/comment_btn"
            android:paddingRight="5sp"
       		android:layout_gravity="right"
       		android:textColor="@color/Snow"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/act_comment_user"
            android:src="@string/act_comment_user"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="15sp"
       		android:textSize="24sp"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <TextView
            android:id="@+id/title_comment"
            android:text="@string/title_comment"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="24sp"
        	android:layout_height="wrap_content" />
    
    <TextView
            android:id="@+id/comment_text_act"
            android:src="@string/comment_text"
       		android:textIsSelectable="false" 
       		android:textColor="@color/Snow"
       		android:paddingLeft="15sp"
            android:layout_width="match_parent"
        	android:layout_height="match_parent" />

</LinearLayout>
